<resources>
    <string name="app_name">GuessTheButtonV2</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="start">START</string>
    <string name="enter_number_2_6">enter number(2-6)</string>
    <string name="enter_number_of_buttons">Enter number of buttons</string>
    <string name="guess_the_button">Guess The Button</string>
    <string name="your_score">Your Score:</string>
</resources>